[tool.poetry]
name = "property-search"
version = "0.1.0"
description = ""
authors = ["toshima <takakioshima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
zoopla = "^1.0.0"
click = "^7.1.2"
jsonplus = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
